# Algorithms4thEdition

./: .gitignore  CMakeLists.txt  README.md
01Fundamentals/: CMakeLists.txt
01Fundamentals/1.3BagsQueuesStacks/: Bag.cpp  Bag.h  BagLinkedList.cpp  CMakeLists.txt  Evaluate.cpp  FixedCapacityStack.cpp  FixedCapacityStackOfStrings.cpp  Queue.cpp  Queue.h  ResizingArrayStack.cpp  ResizingArrayStack.h  Stack.cpp  Stack.h
01Fundamentals/1.3BagsQueuesStacks/exercises/: 1.3.3.txt  CMakeLists.txt  ex1.3.10.cpp  ex1.3.11.cpp  ex1.3.12.cpp  ex1.3.14ResizingArrayQueueOfStrings.cpp  ex1.3.15.cpp  ex1.3.4.cpp  ex1.3.5.cpp  ex1.3.6.cpp  ex1.3.8.cpp  ex1.3.9.cpp
01Fundamentals/1.5CaseStudy-UnionFind/: CMakeLists.txt  UnionFindQuickFind.cpp  UnionFindQuickUnion.cpp  UnionFindTemplate.cpp  UnionFindWeightedQuickUnion.cpp
01Fundamentals/1.5CaseStudy-UnionFind/exercises/: 1.5.01.txt  1.5.04.reference.txt  1.5.04.worst.txt
02Sorting/: CMakeLists.txt  SortBase.h  SortCompare.cpp
02Sorting/2.1ElementarySorts/: CMakeLists.txt  Insertion.cpp  Insertion.h  Selection.cpp  Selection.h  Shell.cpp  Shell.h  SortCompare.cpp  Stopwatch.h
02Sorting/2.2Mergesort/: CMakeLists.txt  Merge.cpp  Merge.h  MergeBU.cpp  MergeBU.h
02Sorting/2.3QuickSort/: CMakeLists.txt  Quick.cpp  Quick.h
02Sorting/2.4PriorityQueues/: CMakeLists.txt  IndexMinPQ.cpp  IndexMinPQ.h  MaxPQ.cpp  MaxPQ.h  MinPQ.cpp  MinPQ.h
03Searching/: CMakeLists.txt
03Searching/3.1SymbolTables/: BinarySearchST.cpp  BinarySearchST.h  CMakeLists.txt  SequentialSearchST.cpp  SequentialSearchST.h
03Searching/3.2BinarySearchTrees/: BST.cpp  BST.h  CMakeLists.txt
03Searching/3.3BalancedSearchTrees/: CMakeLists.txt  RedBlackBST.cpp  RedBlackBST.h
libs/: CMakeLists.txt  Date.h  In.h  Scanner.cpp  Scanner.h  StdIn.cpp  StdIn.h  Transaction.h
