
add_executable(ex1.3.4 ex1.3.4.cpp)
target_link_libraries(ex1.3.4 libUtils)

add_executable(ex1.3.5 ex1.3.5.cpp)
target_link_libraries(ex1.3.5 libUtils)

add_executable(ex1.3.6 ex1.3.6.cpp)
target_link_libraries(ex1.3.6 libUtils)

add_executable(ex1.3.8 ex1.3.8.cpp)
target_link_libraries(ex1.3.8 libUtils)

add_executable(ex1.3.9 ex1.3.9.cpp)
target_link_libraries(ex1.3.9 libUtils)

add_executable(ex1.3.10 ex1.3.10.cpp)
target_link_libraries(ex1.3.10 libUtils)

add_executable(ex1.3.11 ex1.3.11.cpp)
target_link_libraries(ex1.3.11 libUtils)

add_executable(ex1.3.12 ex1.3.12.cpp)
target_link_libraries(ex1.3.12 libUtils)

add_executable(ex1.3.14 ex1.3.14ResizingArrayQueueOfStrings.cpp)
target_link_libraries(ex1.3.14 libUtils)

add_executable(ex1.3.15 ex1.3.15.cpp)
target_link_libraries(ex1.3.15 libUtils)

